.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/tui-markdown-0.3.3/src/snapshots/tui_markdown__tests__highlighted_code.snap
---
source: tui-markdown/src/lib.rs
expression: highlighted_code
---
```rust
fn main() {
    println!("Hello, highlighted code!");
}
```
