.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/tui-markdown-0.3.3/src/snapshots/tui_markdown__tests__highlighted_code_with_indentation-2.snap
---
source: tui-markdown/src/lib.rs
expression: highlighted_code_indented
snapshot_kind: text
---
Text::from_iter([
    Line::from("```rust"),
    Line::from_iter([
        Span::from("fn").fg(Color::Rgb(180, 142, 173)),
        Span::from(" ").fg(Color::Rgb(192, 197, 206)),
        Span::from("main").fg(Color::Rgb(143, 161, 179)),
        Span::from("(").fg(Color::Rgb(192, 197, 206)),
        Span::from(")").fg(Color::Rgb(192, 197, 206)),
        Span::from(" ").fg(Color::Rgb(192, 197, 206)),
        Span::from("{").fg(Color::Rgb(192, 197, 206)),
    ]),
    Line::from_iter([
        Span::from("    ").fg(Color::Rgb(192, 197, 206)),
        Span::from("//").fg(Color::Rgb(101, 115, 126)),
        Span::from(" This is a comment").fg(Color::Rgb(101, 115, 126)),
    ]),
    Line::from_iter([
        Span::from("    ").fg(Color::Rgb(192, 197, 206)),
        Span::from("HelloWorldBuilder").fg(Color::Rgb(192, 197, 206)),
        Span::from("::").fg(Color::Rgb(192, 197, 206)),
        Span::from("new").fg(Color::Rgb(192, 197, 206)),
        Span::from("(").fg(Color::Rgb(192, 197, 206)),
        Span::from(")").fg(Color::Rgb(192, 197, 206)),
    ]),
    Line::from_iter([
        Span::from("        .").fg(Color::Rgb(192, 197, 206)),
        Span::from("with_text").fg(Color::Rgb(150, 181, 180)),
        Span::from("(").fg(Color::Rgb(192, 197, 206)),
        Span::from("\"").fg(Color::Rgb(192, 197, 206)),
        Span::from("Hello, highlighted code!").fg(Color::Rgb(163, 190, 140)),
        Span::from("\"").fg(Color::Rgb(192, 197, 206)),
        Span::from(")").fg(Color::Rgb(192, 197, 206)),
    ]),
    Line::from_iter([
        Span::from("        .").fg(Color::Rgb(192, 197, 206)),
        Span::from("build").fg(Color::Rgb(150, 181, 180)),
        Span::from("(").fg(Color::Rgb(192, 197, 206)),
        Span::from(")").fg(Color::Rgb(192, 197, 206)),
    ]),
    Line::from_iter([
        Span::from("        .").fg(Color::Rgb(192, 197, 206)),
        Span::from("show").fg(Color::Rgb(150, 181, 180)),
        Span::from("(").fg(Color::Rgb(192, 197, 206)),
        Span::from(")").fg(Color::Rgb(192, 197, 206)),
        Span::from(";").fg(Color::Rgb(192, 197, 206)),
    ]),
    Line::from(Span::from("                ").fg(Color::Rgb(192, 197, 206))),
    Line::from(Span::from("}").fg(Color::Rgb(192, 197, 206))),
    Line::from("```"),
])
