.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/tui-markdown-0.3.3/src/snapshots/tui_markdown__tests__highlighted_code_with_indentation.snap
---
source: tui-markdown/src/lib.rs
expression: highlighted_code_indented
---
```rust
fn main() {
    // This is a comment
    HelloWorldBuilder::new()
        .with_text("Hello, highlighted code!")
        .build()
        .show();
                
}
```
